--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <div class="container">
             <!-- logo  -->
             <div class="logo">
-                <img src="image/logo2.png" alt="Quick Logo">
+                <a href="index.html">
+                    <img src="image/logo2.png" alt="Quick Logo">
+                </a>
             </div>
             <!-- menu  -->
             <nav class="menu">
